# ChessConsole

./: .clang-format  .clangd  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  ]  main.cpp
application/: CMakeLists.txt  main.cpp
application/res/shaders/: Basic.shader  Board.shader  Piece.shader  Selected.shader
application/src/: CMakeLists.txt  ChessBoardGLDraw.cpp  ChessBoardGLDraw.h  ChessGL.cpp  ChessGL.h  ChessPieceData.h  ChessPieceSelectedGLDraw.cpp  ChessPieceSelectedGLDraw.h  ChessPiecesGLDraw.cpp  ChessPiecesGLDraw.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureSet.cpp  TextureSet.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferDynamic.cpp  VertexBufferDynamic.h  VertexBufferLayout.h
application/src/src/tests/: CMakeLists.txt  Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
chess/: CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessConsoleUI.cpp  ChessConsoleUI.h  ChessDataInterface.cpp  ChessInstance.cpp  ChessInstance.h  ChessPeepo.cpp  ChessPeepo.h  ChessPiece.cpp  ChessPlayer.cpp  ChessPlayer.h  ChessPlayerAnalyzer.cpp  ChessPlayerAnalyzer.h  ChessPlayerConsoleHuman.cpp  ChessPlayerConsoleHuman.h  ChessPlayerDB.cpp  ChessPlayerDB.h  ChessPlayerRnd.cpp  ChessPlayerRnd.h  ChessTile.cpp  ChessTile.h  ChessUI.cpp  ChessUI.h  ChessUtils.cpp  ChessUtils.h
chess/Analyzer/: CMakeLists.txt  ChessAnalyzer.cpp  ChessAnalyzer.h
chess/ML/: CMakeLists.txt  ChessData.cpp  ChessData.h  ChessDatabaseInterface.cpp  ChessDatabaseInterface.h  ChessLinkedListMoves.cpp  ChessLinkedListMoves.h  ChessPeepo.cpp  ChessPeepo.h
chess/base/: CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessBoardDraw.cpp  ChessBoardDraw.h  ChessData.cpp  ChessData.h  ChessInstance.cpp  ChessInstance.h  ChessInterface.cpp  ChessInterface.h  ChessMove.cpp  ChessMove.h  ChessMoveLogic.cpp  ChessMoveLogic.h  ChessPiece.cpp  ChessPiece.h  ChessTile.cpp  ChessTile.h  ChessUtils.cpp  ChessUtils.h
chess/bitBoard/: ChessBitBoard.cpp  ChessBitBoard.h
chess/web/: CMakeLists.txt  ChessWebInterface.cpp  ChessWebInterface.h
chess/web/www/: board.js  index.html  package-lock.json  package.json  style.css  tsconfig.json
chess/web/www/javascript/: board.js
chess/web/www/src/: board.ts
cmake/: config.hpp.in
database/: createIndexes.sql  droptables.sql  resetTables.sql  settingChanges.sql
scripts/: CMakeLists.txt  PGNConverter.py  addToDB.cpp
scripts/data/outPGN/: 50MovesDrawGame.txt
scripts/data/rawPGN/: 50MovesDrawGame.pgn
tests/: CMakeLists.txt
tests/Data/: basicMoves.txt  basicPGN.txt  checkmates.txt  invalidMoves.txt  liches_db_tests_100.txt  liches_db_tests_500.txt  undoMoves.txt
tests/chess_tests/: CMakeLists.txt  ChessTestUtils.cpp  chessAnalyzerTests.cpp  chessDatabaseInterfaceTests.cpp  chessInputTests.cpp  chessLinkedListTest.cpp  chessWebTests.cpp
tests/lib/: CMakeLists.txt
tests/profiling/: ProfileAnalyzer.cpp
web/: CMakeLists.txt  main.cpp
web/api/: CMakeLists.txt  ChessWebInterface.cpp
web/www/: index.html  package-lock.json  package.json  style.css  tsconfig.json
web/www/javascript/: ChessApp.js  board.js  boardOld.js  main.js
web/www/src/: ChessApp.ts  boardOld.ts  main.ts
