add_executable(chess_input chess_tests/chessInputTests.cpp)
add_executable(chess_dbInterface chess_tests/chessDatabaseInterfaceTests.cpp)
add_executable(chess_analyzer chess_tests/chessAnalyzerTests.cpp)
add_executable(chess_profiler profiling/ProfileAnalyzer.cpp)

target_link_libraries(chess_input chess gtest_main)
target_link_libraries(chess_dbInterface chess chessML gtest_main)
target_link_libraries(chess_analyzer chessBase chessAnalyzer gtest_main)
target_link_libraries(chess_profiler chess gtest_main)

target_include_directories(chess_input PRIVATE ${CMAKE_BINARY_DIR}/generated)

add_subdirectory(lib/googletest)

include(GoogleTest)

gtest_discover_tests(chess_input)
gtest_discover_tests(chess_dbInterface)
gtest_discover_tests(chess_analyzer)
gtest_discover_tests(chess_profiler)
